fix header on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -20,8 +20,9 @@ strong {
 h3 {
 	font-size: 2rem;
 	font-family: 'survives', sans-serif;
-	color: RGBA(21,54,97,1);
-	text-shadow: 1px 0 0 #E6ED99, -1px 0 0 #E6ED99, 0 1px 0 #E6ED99, 0 -1px 0 #E6ED99, 1px 1px #E6ED99, -1px -1px 0 #E6ED99, 1px -1px 0 #E6ED99, -1px 1px 0 #E6ED99;
+	color: RGBA(21, 54, 97, 1);
+	text-shadow: 1px 0 0 #e6ed99, -1px 0 0 #e6ed99, 0 1px 0 #e6ed99, 0 -1px 0 #e6ed99, 1px 1px #e6ed99,
+		-1px -1px 0 #e6ed99, 1px -1px 0 #e6ed99, -1px 1px 0 #e6ed99;
 }
 
 h4 {
@@ -58,54 +59,71 @@ li {
 	list-style-type: none;
 }
 
-
 .team {
 	font-family: 'survives';
 }
 
 .leader {
-	background: linear-gradient(RGBA(178,198,230,.2),RGBA(255,255,255,.2));
+	background: linear-gradient(RGBA(178, 198, 230, 0.2), RGBA(255, 255, 255, 0.2));
 	border-radius: 20px;
 	padding: 20px;
 }
 
 .summary {
-	background: linear-gradient(RGBA(139,132,203,.2),RGBA(255,255,255,.2));
+	background: linear-gradient(RGBA(139, 132, 203, 0.2), RGBA(255, 255, 255, 0.2));
 	border-radius: 20px;
 }
 
 .eliminated {
-	background: linear-gradient(RGBA(255,255,255,.2),RGBA(139,132,203,.1));
+	background: linear-gradient(RGBA(255, 255, 255, 0.2), RGBA(139, 132, 203, 0.1));
 	border-radius: 20px;
 	padding: 50px;
 }
 
 .rules {
-	background: linear-gradient(RGBA(240,231,122,.2),RGBA(236,230,128,.1));
+	background: linear-gradient(RGBA(240, 231, 122, 0.2), RGBA(236, 230, 128, 0.1));
 	border-radius: 20px;
 	padding: 50px;
 }
 
 .site-header {
 	text-align: center;
-	color: #DCE3EC;
-	text-shadow: 1px 0 0 #23305F, -1px 0 0 #23305F, 0 1px 0 #23305F, 0 -1px 0 #23305F, 1px 1px #23305F, -1px -1px 0 #23305F, 1px -1px 0 #23305F, -1px 1px 0 #23305F;
-	background: #F0E77A;
+	color: #dce3ec;
+	text-shadow: 1px 0 0 #23305f, -1px 0 0 #23305f, 0 1px 0 #23305f, 0 -1px 0 #23305f, 1px 1px #23305f,
+	-1px -1px 0 #23305f, 1px -1px 0 #23305f, -1px 1px 0 #23305f;
+	background: #f0e77a;
 	border-radius: 50px;
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-top: 5px;
-	padding: 5px;
-	border: 3px solid #1D3965;
+	margin-left: 25%;
+	margin-right: 25%;
+	margin-top: 10px;
+	padding: 25px;
+	border: 3px solid #1d3965;
+    grid-column: 2;
+	grid-row: 2;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .subhead {
 	text-align: center;
 	font-size: 1.2rem;
+	grid-column: 2;
+	grid-row: 3;
 }
 
 .header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	display: grid;
+	grid-template-columns: 5% 90% 5%;
+	grid-template-rows: 10% 50% 10%
+}
+
+.site-name {
+	line-height: 0.8;
+}
+
+.survivor-logo {
+	grid-column: 1;
+	grid-row: 2;
+	padding-left: 10px;
 }
